--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,22 +17,21 @@ jobs:
       - name: Get Date
         id: get-date
         run: |
-          echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
-        shell: bash
+          echo "DATE=$(date -u "+%Y%m%d")" >> $GITHUB_ENV
 
       # Cache Buildozer global directory
       - name: Cache Buildozer global directory
         uses: actions/cache@v2
         with:
           path: .buildozer_global
-          key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
+          key: buildozer-global-${{ hashFiles('buildozer.spec') }}
 
       # Cache Buildozer directory
       - name: Cache Buildozer directory
         uses: actions/cache@v2
         with:
           path: .buildozer
-          key: ${{ runner.os }}-${{ steps.get-date.outputs.date }}-${{ hashFiles('buildozer.spec') }}
+          key: ${{ runner.os }}-${{ env.DATE }}-${{ hashFiles('buildozer.spec') }}
 
       # Build the app using Buildozer
       - name: Build with Buildozer
@@ -42,9 +41,16 @@ jobs:
           command: buildozer android debug
           buildozer_version: stable
 
+      # Print environment details for debugging
+      - name: Print environment details
+        run: |
+          echo "Date: ${{ env.DATE }}"
+          echo "Python version: $(python --version)"
+          echo "Buildozer version: $(buildozer --version)"
+
       # Upload APK as artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: package
-          path: ${{ steps.buildozer.outputs.apk_path }}  # Adjust the output path if necessary
+          path: ./bin/*.apk  # Ensure the correct path to APK files
