--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,56 +1,20 @@
-name: CI
-
 on:
   push:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
-
+    runs-on: ubuntu-latest
     steps:
-      # Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Get the current date
-      - name: Get Date
-        id: get-date
-        run: |
-          echo "DATE=$(date -u "+%Y%m%d")" >> $GITHUB_ENV
-
-      # Cache Buildozer global directory
-      - name: Cache Buildozer global directory
-        uses: actions/cache@v2
+      - uses: actions/checkout@v4
+      - name: Build APK
+        uses: digreatbrian/buildozer-action@v2
         with:
-          path: .buildozer_global
-          key: buildozer-global-${{ hashFiles('buildozer.spec') }}
+          python-version: 3.10
+          buildozer-cmd: buildozer -v android debug
 
-      # Cache Buildozer directory
-      - name: Cache Buildozer directory
-        uses: actions/cache@v2
-        with:
-          path: .buildozer
-          key: ${{ runner.os }}-${{ env.DATE }}-${{ hashFiles('buildozer.spec') }}
-
-      # Build the app using Buildozer
-      - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer
-        with:
-          command: buildozer android debug
-          buildozer_version: stable
-
-      # Print environment details for debugging
-      - name: Print environment details
-        run: |
-          echo "Date: ${{ env.DATE }}"
-          echo "Python version: $(python --version)"
-          echo "Buildozer version: $(buildozer --version)"
-
-      # Upload APK as artifact
-      - name: Upload APK artifact
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: package
-          path: ./bin/*.apk  # Ensure the correct path to APK files
+          path: ./bin/*.apk
